<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/light_blue_bg">

    <ImageButton
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notes"
        android:contentDescription="@string/notes_logo"/>

    <TextView
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/already_have_an_account"/>

    <Button
        android:id="@+id/B_to_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:layout_marginTop="170dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/don_t_have_an_account_yet"/>

    <Button
        android:id="@+id/B_to_register_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"/>

</LinearLayout>