<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_blue_bg"
    android:id="@+id/LL_register_dialog">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ET_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ET_user_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_full_name"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:textStyle="italic"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ET_password_register1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:textStyle="italic"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ET_password_register2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:inputType="textPassword"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/B_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

</LinearLayout>