<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="80dp"
android:layout_gravity="center"
android:layout_margin="10dp"
app:cardCornerRadius="10dp"
app:cardElevation="5dp"
app:cardMaxElevation="10dp"
android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_list_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/list_name"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/IB_edit_list_name"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/edit"
            android:layout_margin="10dp"
            android:contentDescription="@string/edit_image"/>

        <ImageButton
            android:id="@+id/IB_list_del"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/garbage"
            android:contentDescription="@string/garbage_image"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>