<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:orientation="vertical"
    app:cardMaxElevation="10dp"
    android:padding="5dp"
    android:id="@+id/LL_ensure">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ensure"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/B_do_not_delete_account"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no"/>

        <Button
            android:id="@+id/B_delete_account"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yes"/>

    </LinearLayout>

</LinearLayout>