<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_bg"
    tools:context=".view.NotesActivity">

    <TextView
        android:id="@+id/TV_list_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/list_name"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_margin="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/RV_notes"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_notes"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_list_name"
        tools:listitem="@layout/row_note_item"/>

    <EditText
        android:id="@+id/ET_note_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:gravity="center"
        android:maxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RV_notes"
        android:layout_margin="5dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ET_note_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description"
        android:maxLength="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ET_note_name"
        android:layout_margin="5dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/B_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ET_note_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>

    <include layout="@layout/footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>