<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_bg"
    tools:context=".view.MainActivity">

    <ImageButton
        android:id="@+id/IB_user_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/TV_user_name"
        app:layout_constraintLeft_toRightOf="@id/IB_user_profile"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/TV_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000000"
        app:layout_constraintLeft_toRightOf="@id/IB_user_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_lists"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="20dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/IB_create_list"
        tools:listitem="@layout/row_list_item"
        app:layout_constraintTop_toBottomOf="@id/TV_user_name"
        />

    <ImageButton
        android:id="@+id/IB_create_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RV_lists"
        android:contentDescription="@string/plus_icon"/>

    <include layout="@layout/footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>